--- a/CodeForgeIDE/MainWindow.axaml
+++ b/CodeForgeIDE/MainWindow.axaml
@@ -1,25 +1,36 @@
 <Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="770" d:DesignHeight="513"
-        x:Class="CodeForgeIDE.MainWindow"
-        Title="CodeForgeIDE"
-		ExtendClientAreaToDecorationsHint="True"
-		ExtendClientAreaChromeHints="NoChrome"
-		ExtendClientAreaTitleBarHeightHint="-1"
-		SizeToContent="WidthAndHeight"
-		CanResize="False"
-		WindowStartupLocation="CenterScreen">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="100"/>
-			<RowDefinition/>
-			<RowDefinition Height="28"/>
-		</Grid.RowDefinitions>
-		
-		<Image Source="Assets/Splash.jpg" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="770" Height="513" Grid.RowSpan="3"/>
-		<Label Content="Code Forge" Margin="12" FontSize="46" Foreground="Black"/>
-		<Label Content="Loading..." x:Name="statusLabel" Margin="4" FontSize="12" Foreground="DarkGray" Grid.Row="2"/>
-	</Grid>
+       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+       mc:Ignorable="d" d:DesignWidth="770" d:DesignHeight="513"
+       x:Class="CodeForgeIDE.MainWindow"
+       Title="CodeForgeIDE"
+       ExtendClientAreaToDecorationsHint="True"
+       ExtendClientAreaChromeHints="NoChrome"
+       ExtendClientAreaTitleBarHeightHint="-1"
+       SizeToContent="WidthAndHeight"
+       CanResize="False"
+       WindowStartupLocation="CenterScreen">
+   <Grid>
+       <Grid.RowDefinitions>
+           <RowDefinition Height="100"/>
+           <RowDefinition/>
+           <RowDefinition Height="28"/>
+       </Grid.RowDefinitions>
+
+       <!-- Background Image -->
+       <Image Source="Assets/Splash.jpg" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.RowSpan="3" Width="770" Height="513"/>
+
+       <!-- Title Label -->
+       <Label Content="Code Forge" ZIndex="1" Margin="12" FontSize="46" Foreground="White" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="0"/>
+
+       <!-- Decorative Separator -->
+       <Border BorderBrush="White" ZIndex="1" BorderThickness="0,0,0,2" Margin="20,80,20,0" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"/>
+
+       <!-- Status Label -->
+       <Label Content="Loading..." ZIndex="1" x:Name="statusLabel" Margin="4" FontSize="12" Foreground="LightGray" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2"/>
+
+       <!-- Add a subtle shadow effect -->
+       <Border Background="#80000000" Grid.RowSpan="3"/>
+   </Grid>
 </Window>
