--- a/CodeForgeIDE/Controls/SolutionExplorerItem.axaml
+++ b/CodeForgeIDE/Controls/SolutionExplorerItem.axaml
@@ -9,13 +9,18 @@
 			 x:DataType="local:SolutionExplorerItem">
 
 	<StackPanel Orientation="Vertical">
-		<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-			<core:GuiIcon Name="expandIcon" IconPath="avares://CodeForgeIDE/Assets/Icons/caret-right-8.svg" Width="8" Height="8" Margin="8 0" PointerPressed="GuiIcon_PointerPressed"/>
-			<core:GuiIcon Name="fileIcon" IconPath="avares://CodeForgeIDE/Assets/Icons/file-folder.svg" Width="16" Height="16"/>
-			<Label Content="{Binding TreeNode.Name}" Margin="8 0"/>
-		</StackPanel>
+		<Grid PointerPressed="Grid_PointerPressed_1">
+			<StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="1">
+				<core:GuiIcon Name="expandIcon" IconPath="avares://CodeForgeIDE/Assets/Icons/caret-right-8.svg" DisableCss="False" Width="8" Height="8" Margin="8 0" PointerPressed="GuiIcon_PointerPressed"/>
+				<core:GuiIcon Name="fileIcon" IconPath="avares://CodeForgeIDE/Assets/Icons/file-folder.svg" Width="24" Height="24"/>
+				<Label Content="{Binding TreeNode.Name}" Margin="8 0" Padding="0 4"/>
+			</StackPanel>
+			<Border Background="{DynamicResource SemiGrey1}" ZIndex="-1" IsVisible="{Binding IsSelected}">
+				
+			</Border>
+		</Grid>
 		<StackPanel Name="ChildStack" Orientation="Vertical" Margin="28 0 0 0">
-			
+
 		</StackPanel>
 	</StackPanel>
 </UserControl>
