--- a/CodeForgeIDE/EditorWindow.axaml
+++ b/CodeForgeIDE/EditorWindow.axaml
@@ -3,11 +3,19 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:controls="clr-namespace:CodeForgeIDE.Controls;assembly=CodeForgeIDE"
+	  xmlns:core="clr-namespace:CodeForgeIDE.Core.Controls;assembly=CodeForgeIDE.Core"
       xmlns:up="clr-namespace:Avalonia.UpDock.Controls;assembly=Avalonia.UpDock"
       mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
       x:Class="CodeForgeIDE.EditorWindow"
+	  ExtendClientAreaToDecorationsHint="False"
+      ExtendClientAreaChromeHints="NoChrome"
+      ExtendClientAreaTitleBarHeightHint="-1"
       Title="EditorWindow"
-	Background="{DynamicResource SemiGrey0}">
+	  BorderThickness="0"
+	  CornerRadius="0"
+	  TransparencyLevelHint="None"
+	  SystemDecorations="None"
+	  Background="{DynamicResource SemiGrey0}">
 
 	<Window.Resources>
 		<DataTemplate DataType="x:String" x:Key="TabTemplate">
@@ -18,35 +26,54 @@
 		</DataTemplate>
 	</Window.Resources>
 
-	<DockPanel>
-		<Menu DockPanel.Dock="Top">
-			<MenuItem Header="File">
+	<Border CornerRadius="0" BorderBrush="{DynamicResource SemiGrey1}" BorderThickness="1" Background="{DynamicResource SemiGrey0}">
+		<DockPanel>
+			<Grid DockPanel.Dock="Top" ColumnDefinitions="100 auto * 125">
+				<Label VerticalAlignment="Center" Margin="8 0" FontWeight="Bold">Code Forge</Label>
+				<Menu DockPanel.Dock="Top" Grid.Column="1">
+					<MenuItem Header="File">
 
-			</MenuItem>
-			<MenuItem Header="Edit">
+					</MenuItem>
+					<MenuItem Header="Edit">
 
-			</MenuItem>
-			<MenuItem Header="View">
+					</MenuItem>
+					<MenuItem Header="View">
 
-			</MenuItem>
-		</Menu>
-		<up:DockSpacePanel Name="dockSpacePanel">
-			<up:RearrangeTabControl DockPanel.Dock="Left">
-				<up:ClosableTabItem Header="Solution explorer">
-					<controls:SolutionExplorer/>
-				</up:ClosableTabItem>
-			</up:RearrangeTabControl>
-			
-			<up:SplitPanel Fractions="3 1" DockPanel.Dock="Right" Orientation="Vertical">
+					</MenuItem>
+				</Menu>
+				<Panel Name="dragPanel" Grid.Column="2" Background="{DynamicResource SemiGrey0}">
 
-				<controls:Editor />
-
-				<up:RearrangeTabControl DockPanel.Dock="Bottom">
-					<up:ClosableTabItem Header="Terminal">
-
+				</Panel>
+				<StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Grid.Column="3">
+					<Button Theme="{DynamicResource OutlineButton}" Click="GuiIcon_PointerPressed_Minimize">
+						<core:GuiIcon Name="iconMinimize" IconPath="avares://CodeForgeIDE/Assets/Icons/chrome-minimize.svg" DisableCss="False" Height="16"/>
+					</Button>
+					<Button Theme="{DynamicResource OutlineButton}" Click="GuiIcon_PointerPressed_Maximize">
+						<core:GuiIcon Name="iconMaximize" IconPath="avares://CodeForgeIDE/Assets/Icons/window-multiple-20-regular.svg" DisableCss="False" Height="16"/>
+					</Button>
+					<Button Theme="{DynamicResource OutlineButton}" Click="GuiIcon_PointerPressed_Close">
+						<core:GuiIcon Name="iconClose" IconPath="avares://CodeForgeIDE/Assets/Icons/chrome-close.svg" DisableCss="False" Height="16" Margin="0 0 8 0"/>
+					</Button>
+				</StackPanel>
+			</Grid>
+			<up:DockSpacePanel Name="dockSpacePanel">
+				<up:RearrangeTabControl DockPanel.Dock="Left">
+					<up:ClosableTabItem Header="Solution explorer">
+						<controls:SolutionExplorer/>
 					</up:ClosableTabItem>
 				</up:RearrangeTabControl>
-			</up:SplitPanel>
-		</up:DockSpacePanel>
-	</DockPanel>
+
+				<up:SplitPanel Fractions="3 1" DockPanel.Dock="Right" Orientation="Vertical">
+
+					<controls:Editor />
+
+					<up:RearrangeTabControl DockPanel.Dock="Bottom">
+						<up:ClosableTabItem Header="Terminal">
+
+						</up:ClosableTabItem>
+					</up:RearrangeTabControl>
+				</up:SplitPanel>
+			</up:DockSpacePanel>
+		</DockPanel>
+	</Border>
 </Window>
